--- a/css/style.css
+++ b/css/style.css
@@ -289,7 +289,7 @@ h1 {
 
 footer {
   grid-column: 1 / -1;
-  grid-row: 6 / 6;
+  grid-row: 7/-1;
   padding-top: 30px;
   text-align: center;
   font-weight: 700;
@@ -335,8 +335,8 @@ footer {
 
 #currentpage {
     color: #060829!important;
-    /* text-decoration-line:underline; */
-    background-color: rgb(239,239,240);
+    text-decoration-line:underline;
+    background-color: rgb(108, 108, 223);
 }
 
 /* ===============================
@@ -363,7 +363,7 @@ body {
 
 #indexfoot {
   grid-column: 1 / -1;
-  grid-row: 6 / 7;
+  grid-row: 6/7;
   padding-top: 30px;
   text-align: center;
   font-weight: 700;
@@ -372,14 +372,14 @@ body {
 @media screen and (max-width: 1074px) {
     #indexfoot {
         grid-column: 1 / -1;
-        grid-row: 7 / 7;
+        grid-row: 7 / -1;
     }
 }
   
 @media screen and (max-width: 800px) {
     #indexfoot {
         grid-column: 1 / -1;
-        grid-row: 6 / 6;
+        grid-row: 7/-1;;
     }
 }
   
@@ -387,7 +387,7 @@ body {
     display: grid;
     grid-template-columns: 10% 40% 40% 10%;
     grid-row-gap: 20px;
-    grid-template-rows: auto 35px auto auto auto 50px;
+    grid-template-rows: auto 500px 500px 500px 500px 50px 50px;
     width: 100vw;
     height: 100vh;
     background: rgb(239,239,240);
@@ -487,23 +487,119 @@ a:hover {
     background-repeat: no-repeat;
     background-size: cover;
     grid-column: 1/-1;
+    grid-row: 2/3;
 }
 /*parallax image end*/
 
 .parallax p{
     background-color: white;
-    grid-column: 2/3;
     vertical-align: middle;
     background-color: rgba(255, 255, 255, .8);
     border: 10px solid black;
     margin: 30px;
     padding: 30px;
-    margin-right: 1100px;
-    /* margin-top: 100px; */
+    margin-left: 1000px;
+    margin-top: 10px;
 }
 .parallax h1{
     color: white;
+    margin-top: 80px;
+    margin-left: 1050px;
+    margin-bottom:0px;
+}
+
+.cavs{
+    background-image: url("../images/cavaliers-cavs-cleveland-1081256.jpg");
+
+    /* Set a specific height */
+    height: 500px;
+  
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    grid-column: 1/-1;
+    grid-row: 3/4;
+}
+.cavs p{
+    background-color: white;
+    vertical-align: middle;
+    background-color: rgba(255, 255, 255, .8);
+    border: 10px solid black;
+    margin: 30px;
+    padding: 30px;
+    margin-left: 100px;
+    margin-right: 800px;
+    margin-top: 150px;
+}
+.cavs h1{
+    color: white;
     margin-top: 50px;
-    margin-left: 140px;
+    margin-left: 100px;
+    margin-bottom:0px;
+}
+
+
+.softball{
+    background-image: url("../images/msoftball.jpg");
+
+    /* Set a specific height */
+    height: 500px;
+  
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    grid-column: 1/-1;
+    grid-row:4/5;
+}
+.softball p{
+    background-color: white;
+    vertical-align: middle;
+    background-color: rgba(255, 255, 255, .8);
+    border: 10px solid black;
+    margin: 30px;
+    padding: 30px;
+    margin-left: 850px;
+    margin-top: 150px;
+}
+.softball h1{
+    color: #ffcb05;
+    margin-top: 50px;
+    margin-left: 1250px;
+    margin-bottom:0px;
+}
+
+.personal{
+    background-image: url("../images/design.jpg");
+
+    /* Set a specific height */
+    height: 500px;
+  
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    grid-column: 1/-1;
+    grid-row:5/6;
+}
+.personal p{
+    background-color: white;
+    vertical-align: middle;
+    background-color: rgba(255, 255, 255, .8);
+    border: 10px solid black;
+    margin: 30px;
+    padding: 30px;
+    margin-left: 100px;
+    margin-right: 800px;
+    margin-top: 150px;
+}
+.personal h1{
+    color: white;
+    margin-top: 50px;
+    margin-left: 100px;
     margin-bottom:0px;
 }
