--- a/css/style.css
+++ b/css/style.css
@@ -603,3 +603,63 @@ a:hover {
     margin-left: 100px;
     margin-bottom:0px;
 }
+
+
+
+.headshot{
+    margin-left: 150px;
+}
+.intro{
+    grid-column: 3/5;
+    background-color: white;
+    vertical-align: middle;
+    background-color: rgba(255, 255, 255, .8);
+    border: 10px solid black;
+    margin: 30px;
+    padding: 30px;
+    padding-top: 55px;
+    margin-right: 100px;
+    margin-left: -250px;
+}
+.formcontainer{
+    grid-column: 2/5;
+    margin-right: 100px;
+    height: 550px;
+    background-color: #43529F;
+    border: 10px solid black;
+}
+.formcontainer legend{
+    font-size: 30px;
+    padding: 30px;
+}
+.formcontainer label{
+    font-size: 20px;
+    padding-left: 100px;
+}
+.formcontainer input, .formcontainer textarea{
+    width: 800px;
+    padding: 10px;
+    margin-bottom: 5px;
+}
+.formcontainer textarea{
+    margin-bottom: -10px;
+}
+#name{
+    margin-left: 50px;
+}
+#email{
+    margin-left: 55px;
+}
+#subject{
+    margin-left: 38px;
+}
+#message{
+    margin-left: 23px;
+}
+.formcontainer button{
+    font-size: 30px;
+    margin-left: 1100px;
+    padding: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
