--- a/css/style.css
+++ b/css/style.css
@@ -386,7 +386,7 @@ body {
     display: grid;
     grid-template-columns: 10% 40% 40% 10%;
     grid-row-gap: 20px;
-    grid-template-rows: auto auto auto 500px 500px 50px 50px;
+    grid-template-rows: auto auto 500px 500px 500px 50px 50px;
     width: 100vw;
     height: 100vh;
     background: rgb(239,239,240);
@@ -730,8 +730,11 @@ iframe{
     grid-row: 3/4;
 }
 .graphicproj img{
-    width: 60vw;
-    margin-left: 300px;
+    transform: rotate(90deg);
+    height: 60vw;
+    margin-left: 470px;
+    margin-top: -165px;
+    margin-bottom: -165px;
 }
 .graphicproj button{
     width: 60vw;
@@ -746,4 +749,47 @@ iframe{
     margin-top: 10px;
     margin-bottom: 10px;
     padding: 30px;
+}
+.newproj{
+    grid-column: 1/-1;
+}
+.newproj h2{
+    margin-left: 100px;
+    width: 25vw;
+}
+.newproj img{
+    width: 30%;
+    vertical-align: top;
+    margin-left: 20px;
+    margin-right: 20px;
+    grid-column: 1/-1;
+    /* grid-row: 8/9; */
+    margin-bottom: 25px;
+    margin-top: 25px;
+    border: 1px double black;
+    box-shadow: 10px 10px grey;
+}
+.newproj img:last-child{
+    margin-top: -1767px;
+    margin-left: 525px;
+}
+.oldproj{
+    grid-column: 1/-1;
+}
+.oldproj h2{
+    margin-top: -2500;
+    margin-left: 100px;
+    width: 25vw;
+}
+.oldproj img{
+    width: 30%;
+    vertical-align: top;
+    margin-left: 20px;
+    margin-right: 20px;
+    grid-column: 1/-1;
+    grid-row: 2/3;
+    margin-bottom: 25px;
+    margin-top: 25px;
+    border: 1px double black;
+    box-shadow: 10px 10px grey;
 }
